--- a/pom.xml
+++ b/pom.xml
@@ -93,9 +93,22 @@
             <artifactId>popper.js</artifactId>
             <version>1.14.6</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.46</version>
+        </dependency>
+    
     </dependencies>
-    
-    
 
     <build>
         <plugins>
