Changes to web controllers, prep to switch to JQuery POST handling

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.46</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>angularjs</artifactId>
+            <version>1.7.7</version>
+        </dependency>
     
     </dependencies>
 
