--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.rhcloud.tutorials</groupId>
-    <artifactId>spring-oauth2-reddit</artifactId>
-    <version>0.0.1</version>
+    <groupId>thorasine</groupId>
+    <artifactId>ssc-flairbot</artifactId>
+    <version>0.0.2</version>
+    
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -60,8 +61,6 @@
             <optional>true</optional>
         </dependency>
         
-        
-        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -109,12 +108,24 @@
         </dependency>
         
         <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>angularjs</artifactId>
-            <version>1.7.7</version>
+            <groupId>com.github.taycaldwell</groupId>
+            <artifactId>riot-api-java</artifactId>
+            <version>4.2.0</version>
         </dependency>
-    
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
     </dependencies>
+    
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
@@ -124,5 +135,5 @@
             </plugin>
         </plugins>
     </build>
-    <name>spring-oauth2-reddit</name>
+    <name>ssc-flairbot</name>
 </project>
