--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>thorasine</groupId>
     <artifactId>ssc-flairbot</artifactId>
     <version>0.0.2</version>
-    
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -16,6 +16,13 @@
         <java.version>1.10</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -60,7 +67,7 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-        
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -81,7 +88,7 @@
             <version>2.1.1.RELEASE</version>
             <type>jar</type>
         </dependency>
-        
+
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>font-awesome</artifactId>
@@ -92,7 +99,7 @@
             <artifactId>popper.js</artifactId>
             <version>1.14.6</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
@@ -108,15 +115,16 @@
         </dependency>
 
         <dependency>
-            <groupId>com.merakianalytics.orianna</groupId>
-            <artifactId>orianna</artifactId>
-            <version>4.0.0-rc4</version>
-        </dependency>
-        <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20180813</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.stelar7</groupId>
+            <artifactId>L4J8</artifactId>
+            <version>1.6.41</version>
+        </dependency>
+
     </dependencies>
 
     <build>
