Added chunkification on flair updates. Added tests for limiting / locking mechanism.

--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,11 @@
             <artifactId>L4J8</artifactId>
             <version>1.6.41</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.0-jre</version>
+        </dependency>
 
     </dependencies>
 
