Updating my super secret file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /target/
+/src/main/java/ssc_flairbot/SecretFile.java
+.idea/.name
+.idea/libraries/Maven__commons_codec_commons_codec_1_11.xml
+.idea/libraries/Maven__org_codehaus_jackson_jackson_core_asl_1_9_13.xml
+.idea/libraries/Maven__org_codehaus_jackson_jackson_mapper_asl_1_9_13.xml
+.idea/libraries/Maven__org_springframework_security_oauth_spring_security_oauth2_2_3_5_RELEASE.xml
+.idea/workspace.xml
+l4j8cache/
