--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,9 @@ reddit:
     useCurrentUri: false
   resource:
     userInfoUri: https://oauth.reddit.com/api/v1/me
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/main?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+    username: root
+    password:
+    driver-class-name: com.mysql.jdbc.Driver
