Minor code quality improvements

--- a/src/main/java/ssc_flairbot/SecretFile.java.example
+++ b/src/main/java/ssc_flairbot/SecretFile.java.example
@@ -8,4 +8,6 @@ public class SecretFile {
     public static final APICredentials CREDS = new APICredentials(SecretFile.RIOT_API_KEY, SecretFile.TOURNAMENT_API_KEY);
     public static final String SUBREDDIT = "subreddit name";
     public static final String REDDIT_REFRESH_TOKEN = "reddit refresh token key";
+    public static final String REDDIT_MOD_CLIENT_ID = "reddit flair mod client id";
+    public static final String REDDIT_MOD_CLIENT_SECRET = "reddit flair mod client secret";
 }
