Added some comments to SecretFile.java.example

--- a/src/main/java/ssc_flairbot/SecretFile.java.example
+++ b/src/main/java/ssc_flairbot/SecretFile.java.example
@@ -2,6 +2,9 @@ package ssc_flairbot;
 
 import no.stelar7.api.l4j8.basic.*;
 
+//Riot API: https://developer.riotgames.com/
+//Reddit API: https://www.reddit.com/dev/api/
+
 public class SecretFile {
     public static final String RIOT_API_KEY = "riot api key";
     public static final String TOURNAMENT_API_KEY = "riot tournament api key";
