--- a/src/main/java/ssc_flairbot/SecretFile.java.example
+++ b/src/main/java/ssc_flairbot/SecretFile.java.example
@@ -1,7 +1,8 @@
 package ssc_flairbot;
 
 //Riot API: https://developer.riotgames.com/
-//Reddit API: https://www.reddit.com/dev/api/
+//Reddit API Authorization: https://github.com/reddit-archive/reddit/wiki/OAuth2
+//Alternative way of getting refresh token: https://not-an-aardvark.github.io/reddit-oauth-helper/
 
 public class SecretFile {
     public static final String RIOT_API_KEY = "riot api key";
