--- a/src/main/resources/application.yml.example
+++ b/src/main/resources/application.yml.example
@@ -18,7 +18,7 @@ reddit:
     userAuthorizationUri: https://www.reddit.com/api/v1/authorize
     scope: identity
     clientAuthenticationScheme: header
-    preEstablishedRedirectUri: [myRedditAppRedirectUri]
+    preEstablishedRedirectUri: [myRedditAppRedirectUri that ends with /loginReddit]
     useCurrentUri: false
     modFlairRefreshToken: [modFlairRefreshToken]
   resource:
