--- a/docker-compose.example
+++ b/docker-compose.example
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  my-app:
-    image: myapp:1.0
+  ssc-flairbot:
+    image: ssc-flairbot:1.0
     ports: 
       - 8080:8080
     environment:
